# Sparkit

./: .gitignore  LICENCE  LICENSE  MANIFEST.in  README.md  Sparkit.py  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
Sparkit/: Sparkit.py  __init__.py
examples/: requirements.txt  sample_class_dec.py  sample_imp.py  sample_imp_dec.py
examples/class_and_decorators/: sample_class_dec.py
examples/class_code/: sample_class.py
