[build-system]
requires = ["setuptools>=61", "wheel"]
[project]
name = "Sparkit"
version = "0.1.0"
description = "A lightweight runtime SDK for executing Python sparkit scripts"
authors = [
    { name = "kelwSagashi", email = "kelw.prod@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
build-backend = "setuptools.build_meta"
