[metadata]
name = sparkit
version = 0.1.0
description = A lightweight runtime SDK for executing Python sparkit scripts
long_description = file: README.md
long_description_content_type = text/markdown
author = kelwSagashi
license = MIT
license_files = LICENSE
url = https://github.com/kelwSagashi/Sparkit
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: Portuguese
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =

[options.packages.find]
where = .
